# biz/router/follow/follow.go
@@ -1,0 +1,30 @@
+// Code generated by hertz generator. DO NOT EDIT.
+
+package follow
+
+import (
+	follow "bibi/biz/handler/follow"
+	"github.com/cloudwego/hertz/pkg/app/server"
+)
+
+/*
+ This file will register all the routes of the services in the master idl.
+ And it will update automatically when you use the "update" command for the idl.
+ So don't modify the contents of the file, or your code will be deleted when it is updated.
+*/
+
+// Register register routes based on the IDL 'api.${HTTP Method}' annotation.
+func Register(r *server.Hertz) {
+
+	root := r.Group("/", rootMw()...)
+	{
+		_bibi := root.Group("/bibi", _bibiMw()...)
+		{
+			_follow := _bibi.Group("/follow", _followMw()...)
+			_follow.POST("/action", append(_followactionMw(), follow.FollowAction)...)
+			_follow.GET("/follower", append(_followerlistMw(), follow.FollowerList)...)
+			_follow.GET("/following", append(_followinglistMw(), follow.FollowingList)...)
+			_follow.GET("/friend", append(_friendlistMw(), follow.FriendList)...)
+		}
+	}
+}
